<resources>
    <string name="app_name">PROYECTOELECTIVAUI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Facilita_tu_vida">Facilita tu vida</string>
    <string name="iniciar">Iniciar</string>
    <string name="password">Password</string>
    <string name="registrar">Registrar</string>
    <string name="user">User</string>
    <string name="seleccione_el_servicio">Seleccione el servicio</string>
    <string name="cantidad_de_consumo">cantidad de consumo</string>
    <string name="valor_unitario">Valor Unitario</string>
    <string name="calcular">CALCULAR</string>
    <string name="servicio">SERVICIO</string>
    <string name="precio">PRECIO</string>
    <string name="registrar_servicio">Registrar servicio</string>
    <string name="calcular_pago">Editar servicio</string>
    <string name="gasto_mensual">Gasto Mensual</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_home">SERVICIOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hola_usuario">Hola %s</string>
    <string name="gasto">Gasto</string>
    <string name="gasto_mes">Gasto mes</string>
    <string name="cantidad_de_consumo1">Cantidad de Consumo</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="no_tienes_cuenta_registrate">No tienes una cuenta, Registrate</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">Ya tienes una cuenta? Inicia sesión</string>
    <string name="registro">Registro</string>
</resources>