<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GastoMensual.GastoMensual">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow
            android:layout_marginTop="40dp"
            >
            <TextView
                android:text="@string/servicio"
                android:padding="10dip"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/chewy"
                android:textSize="23sp"

                />
            <TextView
                android:text="@string/precio"
                android:gravity="center_horizontal"
                android:padding="10dip"
                android:fontFamily="@font/chewy"
                android:textSize="23sp"

                />
        </TableRow>


    </TableLayout>
    <TextView
        android:id="@+id/text_gastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:fontFamily="@font/chewy"
        android:text="@string/gasto"
        />
    <EditText
        android:id="@+id/campogasto"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="20dp"
        android:hint="@string/gasto_mes"
        android:autofillHints="number"
        android:inputType="number" />

</FrameLayout>