<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".RegistroFragment">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:paddingTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icono"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icono"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/chewy"
            android:text="Registro"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="35dp"
        android:paddingBottom="100dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/imguser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario2"
            android:layout_gravity="left"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="top|center_horizontal"
            android:autofillHints="username"
            android:hint="@string/user"
            android:inputType="text" />

        <ImageView
            android:id="@+id/imgpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pass1"
            android:layout_gravity="left"
            android:contentDescription="@string/password"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="top|center_horizontal"
            android:autofillHints="username"
            android:hint="@string/password"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="40dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azulceleste"
            android:layout_marginEnd="30dp"
            android:text="@string/iniciar"
            tools:ignore="ButtonStyle"

            />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azulceleste"
            android:text="@string/registrar"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>